fix(checkbox): remove gap if no label

--- a/src/components/checkbox-group/checkbox/bl-checkbox.css
+++ b/src/components/checkbox-group/checkbox/bl-checkbox.css
@@ -20,6 +20,10 @@ label {
   word-break: break-all;
 }
 
+.label[hidden] {
+  display: none;
+}
+
 input {
   appearance: none;
   position: absolute;
